--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   flutter_polyline_points:
   geocoder:
   geolocator:
+  google_maps_webservice:
+  flutter_google_places:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
